Bug 428745 - "Kill a Window" action doesn't end with ellipsis
Summary: "Kill a Window" action doesn't end with ellipsis
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-05 20:56 UTC by Vlad Zahorodnii
Modified: 2020-11-13 08:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Zahorodnii 2020-11-05 20:56:02 UTC
SUMMARY
"Kill a Window" action requires additional user input to complete. Therefore, according to the HIG, it needs to end with ellipsis.

ADDITIONAL INFORMATION
https://hig.kde.org/style/writing/labels.html#using-ellipses-in-labels
Comment 1 Nate Graham 2020-11-05 21:58:34 UTC
True.
Comment 2 David Redondo 2020-11-13 08:15:32 UTC
Git commit 2335fb88564f33be3b875e55808ddfaf6f93bac4 by David Redondo.
Committed on 13/11/2020 at 08:15.
Pushed by davidre into branch 'master'.

Add ellipsis to "Kill a Window"

M  +1    -1    src/ToolsModel.cpp

https://invent.kde.org/plasma/plasma-systemmonitor/commit/2335fb88564f33be3b875e55808ddfaf6f93bac4