Add ellipsis to "Kill a Window"

BUG:428745